crates/ruff_python_parser/tests/snapshots/invalid_syntax@for_stmt_missing_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/for_stmt_missing_target.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..14,
        body: [
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 0..13,
                    is_async: false,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 3..3,
                            id: Name(""),
                            ctx: Store,
                        },
                    ),
                    pattern: None,
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 7..8,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 10..13,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 10..13,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | for in x: ...
  |     ^^ Syntax Error: Expected an identifier
