crates/ruff_python_parser/tests/snapshots/invalid_syntax@from_import_missing_module.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/from_import_missing_module.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..19,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..4,
                    module: None,
                    names: [],
                    level: 0,
                    is_lazy: false,
                    is_export: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 5..18,
                    module: None,
                    names: [
                        Alias {
                            range: 17..18,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("x"),
                                range: 17..18,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    is_export: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | from
  |     ^ Syntax Error: Expected a module name
2 | from import x
  |


  |
1 | from
2 | from import x
  |      ^^^^^^ Syntax Error: Expected a module name
  |
